got that new new
new new

--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
   <hr>
   <n1> <a href="website.html"> <u> home </u> </a> </n1>
   <n2> - <a href="contact.html"> <u> contact </u> </a> </n2>
-  <n3> - <a href="portfolio.html"> <u> portfolio </u> </a> </n3>
+  <n3> - <a href="https://cheyannebailey2019.wordpress.com"> <u> portfolio </u> </a> </n3>
   <hr>
 </nav>
 <br>
