--- a/website.html
+++ b/website.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
     <title>Cheyanne's cheat sheet</title>
   </head>
-  <body style="background-color:#C1DEEA;">
-    <center>
+  <center>
+  <header>
     <h1><u>Cheyanne Bailey Portfolio</u></h1>
     <h2>Welcome everyone to my website!</h2>
+
     <nav style="background-color:#58A7C6;">
       <hr>
       <n1><a href="website.html"><u>home</u> </a> </n1>
@@ -16,25 +17,43 @@
       <n4> - <a href="https://cheyannebailey2019.wordpress.com"><u>portfolio</u> </a></n4>
       <hr>
     </nav>
-  </center>
+
+  </header>
+  <body style="background-color:#C1DEEA;">
+
 
     <br>
+<table>
+  <tr>
+    <td> <a href="1.html" target="_blank"> <img src="thumbnail/1.jpg" alt="Fish"> </a> </td>
+    <td> <a href="2.html" target="_blank"> <img src="thumbnail/2.jpg" alt="PaintingPortrait"> </a> </td>
+    <td> <a href="3.html" target="_blank"> <img src="thumbnail/3.jpg" alt="shells"> </a> </td>
+    <td> <a href="4.html" target="_blank"> <img src="thumbnail/4.jpg" alt="rebel"> </a> </td>
+    <td> <a href="5.html" target="_blank"> <img src="thumbnail/5.jpg" alt="robbie"> </a> </td>
+    <td> <a href="6.html" target="_blank"> <img src="thumbnail/6.jpg" alt="friends"> </a> </td>
+  <tr>
+    <td> <a href="7.html" target="_blank"> <img src="thumbnail/7.jpg" alt="diving"> </a> </td>
+    <td> <a href="8.html" target="_blank"> <img src="thumbnail/8.jpg" alt="puppy"> </a> </td>
+    <td> <a href="9.html" target="_blank"> <img src="thumbnail/9.jpg" alt="trump"> </a> </td>
+    <td> <a href="10.html" target="_blank"> <img src="thumbnail/10.jpg" alt="candle"> </a> </td>
+    <td> <a href="11.html" target="_blank"> <img src="thumbnail/11.jpg" alt="PuppyPortrait"> </a> </td>
+    <td> <a href="12.html" target="_blank"> <img src="thumbnail/12.jpg" alt="heart"> </a> </td>
 
-  </body>
+</br>
 
 
 
 
-
-
-
-
-<center>
-  <div id="mainFooter">
 <footer style="background-color:#2F6F89;">
+
   <hr>
 <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
 <hr>
-</footer>
+
 </center>
+</footer>
+
+</body>
+
+
 </html>
