--- a/website.html
+++ b/website.html
@@ -26,7 +26,7 @@
 <table>
   <tr>
     <td> <a href="1.html" target="_blank"> <img src="thumbnail/1.jpg" alt="Fish"> </a> </td>
-    <td> <a href="2.html" target="_blank"> <img src="thumbnail/2.jpg" alt="PaintingPortrait"> </a> </td>
+    <td> <a href="2.html" target="_blank"> <img src="thumbnail/2.JPG" alt="PaintingPortrait"> </a> </td>
     <td> <a href="3.html" target="_blank"> <img src="thumbnail/3.jpg" alt="shells"> </a> </td>
     <td> <a href="4.html" target="_blank"> <img src="thumbnail/4.jpg" alt="rebel"> </a> </td>
     <td> <a href="5.html" target="_blank"> <img src="thumbnail/5.jpg" alt="robbie"> </a> </td>
@@ -35,7 +35,7 @@
     <td> <a href="7.html" target="_blank"> <img src="thumbnail/7.jpg" alt="diving"> </a> </td>
     <td> <a href="8.html" target="_blank"> <img src="thumbnail/8.jpg" alt="puppy"> </a> </td>
     <td> <a href="9.html" target="_blank"> <img src="thumbnail/9.jpg" alt="trump"> </a> </td>
-    <td> <a href="10.html" target="_blank"> <img src="thumbnail/10.jpg" alt="candle"> </a> </td>
+    <td> <a href="10.html" target="_blank"> <img src="thumbnail/10.JPG" alt="candle"> </a> </td>
     <td> <a href="11.html" target="_blank"> <img src="thumbnail/11.jpg" alt="PuppyPortrait"> </a> </td>
     <td> <a href="12.html" target="_blank"> <img src="thumbnail/12.jpg" alt="heart"> </a> </td>
 
