--- a/website.html
+++ b/website.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Cheyanne's cheat sheet</title>
   </head>
-  <center>
+
+    <center><body style="background-color:#C1DEEA;">
   <header>
     <h1><u>Cheyanne Bailey Portfolio</u></h1>
     <h2>Welcome everyone to my website!</h2>
@@ -19,7 +20,7 @@
     </nav>
 
   </header>
-  <body style="background-color:#C1DEEA;">
+  <main>
 
 
     <br>
@@ -38,9 +39,9 @@
     <td> <a href="10.html" target="_blank"> <img src="thumbnail/10.JPG" alt="candle"> </a> </td>
     <td> <a href="11.html" target="_blank"> <img src="thumbnail/11.jpg" alt="PuppyPortrait"> </a> </td>
     <td> <a href="12.html" target="_blank"> <img src="thumbnail/12.jpg" alt="heart"> </a> </td>
-
+</table>
 </br>
-
+  </main>
 
 
 
@@ -50,7 +51,6 @@
 <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
 <hr>
 
-</center>
 </footer>
 
 </body>
