--- a/2.html
+++ b/2.html
@@ -18,7 +18,7 @@
       </br>
   <body style="background-color:#C1DEEA;">
     <center>
-    <img src="originals/2.0.jpg" alt="PaintedPortrait"
+    <img src="originals/2.0.JPG" alt="PaintedPortrait"
     width="550" height="820"
   </center>
 
