--- a/10.html
+++ b/10.html
@@ -18,12 +18,12 @@
       </br>
   <body style="background-color:#C1DEEA;">
     <center>
-    <img src="originals/10.0.jpg" alt="candle"
+    <img src="originals/10.0.JPG" alt="candle"
     width="880" height="660"
   </center>
   </body>
 
-  <h4> Love to burn these beautiful candles! </h4> 
+  <h4> Love to burn these beautiful candles! </h4>
 
   <br>
 
