--- a/website.html
+++ b/website.html
@@ -13,7 +13,7 @@
     <nav style="background-color:#58A7C6;">
       <hr>
       <n1><a href="website.html"><u>home</u> </a> </n1>
-      <n2> - <a href="about.html"><u>about</u> </a></n2>
+      <n2> - <a href="About.html"><u>about</u> </a></n2>
       <n3> - <a href="contact.html"><u>contact</u> </a></n3>
       <n4> - <a href="https://cheyannebailey2019.wordpress.com"><u>portfolio</u> </a></n4>
       <hr>
