--- a/3.html
+++ b/3.html
@@ -17,7 +17,7 @@
 
       </br>
   <body style="background-color:#C1DEEA;">
-    <img src="originals/3.0.jpg" alt="shells"
+    <img src="originals/3.0.JPG" alt="shells"
     width="550" height="820"
   </center>
   </body>
