--- a/9.html
+++ b/9.html
@@ -18,7 +18,7 @@
       </br>
   <body style="background-color:#C1DEEA;">
     <center>
-    <img src="originals/9.0.jpg" alt="trump"
+    <img src="originals/9.0.JPG" alt="trump"
     width="660" height="880"
   </center>
   </body>
