--- a/website.html
+++ b/website.html
@@ -26,19 +26,19 @@
     <br>
 <table style="width:1000px;">
   <tr>
-    <td> <a href="1.html" target="_blank"> <img src="thumbnail/1.jpg" alt="Fish" style="width: 166px;"> </a> </td>
-    <td> <a href="2.html" target="_blank"> <img src="thumbnail/2.JPG" alt="PaintingPortrait" style="width: 166px;"> </a> </td>
-    <td> <a href="3.html" target="_blank"> <img src="thumbnail/3.jpg" alt="shells" style="width: 166px;">  </a> </td>
-    <td> <a href="4.html" target="_blank"> <img src="thumbnail/4.jpg" alt="rebel" style="width: 166px;"> </a> </td>
-    <td> <a href="5.html" target="_blank"> <img src="thumbnail/5.jpg" alt="robbie" style="width: 166px;"> </a> </td>
-    <td> <a href="6.html" target="_blank"> <img src="thumbnail/6.jpg" alt="friends" style="width: 166px;"> </a> </td>
+    <td> <a href="1.html" target="_self"> <img src="thumbnail/1.jpg" alt="Fish" style="width: 166px;"> </a> </td>
+    <td> <a href="2.html" target="_self"> <img src="thumbnail/2.JPG" alt="PaintingPortrait" style="width: 166px;"> </a> </td>
+    <td> <a href="3.html" target="_self"> <img src="thumbnail/3.jpg" alt="shells" style="width: 166px;">  </a> </td>
+    <td> <a href="4.html" target="_self"> <img src="thumbnail/4.jpg" alt="rebel" style="width: 166px;"> </a> </td>
+    <td> <a href="5.html" target="_self"> <img src="thumbnail/5.jpg" alt="robbie" style="width: 166px;"> </a> </td>
+    <td> <a href="6.html" target="_self"> <img src="thumbnail/6.jpg" alt="friends" style="width: 166px;"> </a> </td>
   <tr>
-    <td> <a href="7.html" target="_blank"> <img src="thumbnail/7.jpg" alt="diving" style="width: 166px;"> </a> </td>
-    <td> <a href="8.html" target="_blank"> <img src="thumbnail/8.jpg" alt="puppy" style="width: 166px;"> </a> </td>
-    <td> <a href="9.html" target="_blank"> <img src="thumbnail/9.jpg" alt="trump" style="width: 166px;"> </a> </td>
-    <td> <a href="10.html" target="_blank"> <img src="thumbnail/10.JPG" alt="candle" style="width: 166px;"> </a> </td>
-    <td> <a href="11.html" target="_blank"> <img src="thumbnail/11.jpg" alt="PuppyPortrait" style="width: 166px;"> </a> </td>
-    <td> <a href="12.html" target="_blank"> <img src="thumbnail/12.jpg" alt="heart" style="width: 166px;"> </a> </td>
+    <td> <a href="7.html" target="_self"> <img src="thumbnail/7.jpg" alt="diving" style="width: 166px;"> </a> </td>
+    <td> <a href="8.html" target="_self"> <img src="thumbnail/8.jpg" alt="puppy" style="width: 166px;"> </a> </td>
+    <td> <a href="9.html" target="_self"> <img src="thumbnail/9.jpg" alt="trump" style="width: 166px;"> </a> </td>
+    <td> <a href="10.html" target="_self"> <img src="thumbnail/10.JPG" alt="candle" style="width: 166px;"> </a> </td>
+    <td> <a href="11.html" target="_self"> <img src="thumbnail/11.jpg" alt="PuppyPortrait" style="width: 166px;"> </a> </td>
+    <td> <a href="12.html" target="_self"> <img src="thumbnail/12.jpg" alt="heart" style="width: 166px;"> </a> </td>
 </table>
 </br>
   </main>
