--- a/1.html
+++ b/1.html
@@ -2,8 +2,11 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Fish</title>
+  </head>
+  <center><body style="background-color:#C1DEEA;">
     <header>
-      <center>
+
         <h2> <u> Ice Fishing </u> </h2>
       <nav style="background-color:#58A7C6;">
         <hr>
@@ -11,27 +14,29 @@
         <n2> - <a href="2.html"> <u> next </u> </a> </n2>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
-      </br>
-  <body style="background-color:#C1DEEA;">
-    <center>
-    <img src="originals/1.0.jpeg" alt="fish"
+
+
+    <center> <img src="originals/1.0.jpeg" alt="fish"
     width="600" height="920"
-  </center>
+ </center> 
 
   <h4> Over quarantine my family and I went ice fishing for the first time on the lake. I caught three rainbow trout! </h4>
-  </body>
+</main>
 
   <br>
 
-</br>
+
 
   <footer style="background-color:#2F6F89;">
     <hr>
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
-</center>
   </footer>
+</body>
+</center>
 </html>
