--- a/11.html
+++ b/11.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Portrait of Cocoa</title>
+  </head>
     <header>
       <center>
         <h2> <u> Portrait of Cocoa </u> </h2>
@@ -23,7 +25,7 @@
   </center>
   </body>
 
-  <h4> Personally this stippling portriat is my favorite art piece I've created over the years. Seeing this portriat all the time just pushes me to become a better artist. </h4> 
+  <h4> Personally this stippling portriat is my favorite art piece I've created over the years. Seeing this portriat all the time just pushes me to become a better artist. </h4>
 
   <br>
 
