--- a/12.html
+++ b/12.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Heart</title>
+  </head>
     <header>
       <center>
         <h2> <u> My Heart</u> </h2>
@@ -22,7 +24,7 @@
   </center>
   </body>
 
-<h4> This assignment was really relaxing to create. I spent over 20 hours on this human heart just trying to get every fine detail into this piece. I wanted to make sure this piece had a large variety of values and contrast. </h4> 
+<h4> This assignment was really relaxing to create. I spent over 20 hours on this human heart just trying to get every fine detail into this piece. I wanted to make sure this piece had a large variety of values and contrast. </h4>
 
   <br>
 
