--- a/5.html
+++ b/5.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Robbie</title>
+  </head>
     <header>
       <center>
         <h2> <u> Robbie </u> </h2>
@@ -22,7 +24,7 @@
     width="690" height="880"
   </center>
   </body>
-  <h4> Gave my baby cousin a smore over the summer while babysitting! </h4> 
+  <h4> Gave my baby cousin a smore over the summer while babysitting! </h4>
 
   <br>
 
