--- a/6.html
+++ b/6.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Friends</title>
+  </head>
     <header>
       <center>
         <h2> <u> Crazy Time With Friends </u> </h2>
@@ -22,7 +24,7 @@
     width="660" height="880"
   </center>
   </body>
-<h4> Last semester me and some friends facetimed on snapchat to help eachother with homework and hangout. </h4> 
+<h4> Last semester me and some friends facetimed on snapchat to help eachother with homework and hangout. </h4>
 
   <br>
 
