--- a/8.html
+++ b/8.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Cocoa</title>
+  </head>
     <header>
       <center>
         <h2> <u> My Babygirl Cocoa </u> </h2>
