--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Cheyanne's cheat sheet</title>
+    <title>About me </title>
   </head>
   <body style="background-color:#C1DEEA;">
 <h1 style="text-align:center;"><u>About</u></h1>
