--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang "en" dir "ltr">
   <head>
     <meta charset="utf-8">
-    <title>Cheyanne's cheat sheet</title>
+    <title>Contact</title>
   </head>
   <body style="background-color:#C1DEEA;">
 <h1 style="text-align:center;"><u>Contact</u></h1>
