--- a/website.html
+++ b/website.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
-    <title>Cheyanne's cheat sheet</title>
+    <title>Cheyanne's Website</title>
   </head>
 
     <center><body style="background-color:#C1DEEA;">
