--- a/10.html
+++ b/10.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Candle</title>
+  </head>
     <header>
       <center>
         <h2> <u> Candles </u> </h2>
