--- a/2.html
+++ b/2.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Guache Portrait</title>
+  </head>
     <header>
       <center>
         <h2> <u> Guache Self Portrait </u> </h2>
