--- a/3.html
+++ b/3.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Shells</title>
+  </head>
     <header>
       <center>
         <h2> <u> Shells </u> </h2>
