--- a/7.html
+++ b/7.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Diving</title>
+  </head>
     <header>
       <center>
         <h2> <u> Diving </u> </h2>
@@ -23,7 +25,7 @@
   </center>
   </body>
 
-  <h4> Always miss being apart of the swim and dive team. </h4> 
+  <h4> Always miss being apart of the swim and dive team. </h4>
 
   <br>
 
