--- a/9.html
+++ b/9.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr"
   <head>
     <meta charset="utf-8">
+    <title>Baby boy</title>
+  </head>
     <header>
       <center>
         <h2> <u> My Little Baby Boy </u> </h2>
