--- a/12.html
+++ b/12.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Heart</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> My Heart</u> </h2>
@@ -13,19 +14,21 @@
         <n2> - <a href="website.html"><u>home</u> </a> </n2>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/12.0.jpg" alt="heart"
     width="680" height="880"
   </center>
-  </body>
+
 
 <h4> This assignment was really relaxing to create. I spent over 20 hours on this human heart just trying to get every fine detail into this piece. I wanted to make sure this piece had a large variety of values and contrast. </h4>
-
+</main>
   <br>
 
 </br>
@@ -35,4 +38,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
