--- a/2.html
+++ b/2.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Guache Portrait</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> Guache Self Portrait </u> </h2>
@@ -14,18 +15,19 @@
         <n3> - <a href="3.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
-
+    </header>
+<main>
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/2.0.JPG" alt="PaintedPortrait"
     width="550" height="820"
   </center>
 
 <h4> This was my very first guache portrait created as an assignment. I loved how this came out and overall had a fun time creating it! </h4>
-  </body>
+</main>
 
   <br>
 
@@ -36,4 +38,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
