--- a/3.html
+++ b/3.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Shells</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> Shells </u> </h2>
@@ -14,17 +15,19 @@
         <n3> - <a href="4.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
-    <img src="originals/3.0.JPG" alt="shells"
+
+    <center><img src="originals/3.0.JPG" alt="shells"
     width="550" height="820"
   </center>
-  </body>
-<h4> Found these cute little shells on this beach me and my friend went to. It was a really fun time because we had the beach to ourselves the entire time we were there. </h4>
 
+<h4> Found these cute little shells on this beach me and my friend went to. It was a really fun time because we had the beach to ourselves the entire time we were there. </h4>
+</main>
   <br>
 
 </br>
@@ -34,4 +37,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
