--- a/4.html
+++ b/4.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Rebel</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> My Little Baby Rebel </u> </h2>
@@ -14,18 +15,20 @@
         <n3> - <a href="5.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/4.0.jpeg" alt="rebel"
     width="590" height="830"
   </center>
-  </body>
-<h4> This is my adorable little girl named Rebel. </h4>
 
+<h4> This is my adorable little girl named Rebel. </h4>
+</main>
   <br>
 
 </br>
@@ -35,4 +38,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
