--- a/5.html
+++ b/5.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Robbie</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> Robbie </u> </h2>
@@ -14,18 +15,20 @@
         <n3> - <a href="6.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/5.0.jpeg" alt="robbie"
     width="690" height="880"
   </center>
-  </body>
-  <h4> Gave my baby cousin a smore over the summer while babysitting! </h4>
 
+  <h4> Gave my baby cousin a smore over the summer while babysitting! </h4>
+</main>
   <br>
 
 </br>
@@ -35,4 +38,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
