--- a/6.html
+++ b/6.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Friends</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> Crazy Time With Friends </u> </h2>
@@ -14,18 +15,20 @@
         <n3> - <a href="7.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/6.0.PNG" alt="friends"
     width="660" height="880"
   </center>
-  </body>
-<h4> Last semester me and some friends facetimed on snapchat to help eachother with homework and hangout. </h4>
 
+<h4> Last semester me and some friends facetimed on snapchat to help eachother with homework and hangout. </h4>
+</main>
   <br>
 
 </br>
@@ -35,4 +38,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body> 
 </html>
