--- a/7.html
+++ b/7.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Diving</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> Diving </u> </h2>
@@ -14,19 +15,21 @@
         <n3> - <a href="8.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/7.0.jpg" alt="diving"
     width="660" height="880"
   </center>
-  </body>
+
 
   <h4> Always miss being apart of the swim and dive team. </h4>
-
+</main>
   <br>
 
 </br>
@@ -36,4 +39,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
