--- a/8.html
+++ b/8.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Cocoa</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> My Babygirl Cocoa </u> </h2>
@@ -14,18 +15,20 @@
         <n3> - <a href="9.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/8.1.jpg" alt="puppy"
     width="660" height="880"
   </center>
-  </body>
-<h4> This is my beautiful 11 year old chocolate lab. Her name is Cocoa and I got her 11 years ago as a christmas present! </h4>
 
+<h4> This is my beautiful 11 year old chocolate lab. Her name is Cocoa and I got her 11 years ago as a christmas present! </h4>
+</main>
   <br>
 
 </br>
@@ -35,4 +38,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
