--- a/9.html
+++ b/9.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Baby boy</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> My Little Baby Boy </u> </h2>
@@ -14,6 +15,8 @@
         <n3> - <a href="10.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
@@ -23,9 +26,9 @@
     <img src="originals/9.0.JPG" alt="trump"
     width="660" height="880"
   </center>
-  </body>
-<h4> My adorable baby boy! This is Rebels brother :)
 
+<h4> My adorable baby boy! This is Rebels brother :)
+</main>
   <br>
 
 
@@ -37,4 +40,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body>
 </html>
