--- a/10.html
+++ b/10.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Candle</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> Candles </u> </h2>
@@ -14,19 +15,21 @@
         <n3> - <a href="11.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/10.0.JPG" alt="candle"
     width="880" height="660"
   </center>
-  </body>
+
 
   <h4> Love to burn these beautiful candles! </h4>
-
+</main>
   <br>
 
 </br>
@@ -36,4 +39,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body> 
 </html>
