--- a/11.html
+++ b/11.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Portrait of Cocoa</title>
   </head>
+  <center> <body style="background-color:#C1DEEA;">
     <header>
       <center>
         <h2> <u> Portrait of Cocoa </u> </h2>
@@ -14,19 +15,21 @@
         <n3> - <a href="12.html"> <u> next </u> </a> </n3>
         <hr>
       </nav>
+    </header>
+    <main>
 
         <br>
 
       </br>
-  <body style="background-color:#C1DEEA;">
+
     <center>
     <img src="originals/11.0.jpg" alt="puppyportrait"
     width="680" height="880"
   </center>
-  </body>
+
 
   <h4> Personally this stippling portriat is my favorite art piece I've created over the years. Seeing this portriat all the time just pushes me to become a better artist. </h4>
-
+</main>
   <br>
 
 </br>
@@ -36,4 +39,5 @@
   <p>&copy;Cheyanne Bailey -- assignment 1 demo -- dgma4103 -- copyright spring 2021 </p>
   <hr>
   </footer>
+</body> 
 </html>
