--- a/Project 1 redsign (project 2)/8.html
+++ b/Project 1 redsign (project 2)/8.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr"
-  <head> <link rel="stylesheet" href="css/stylesheet3.css">
+  <head> <link rel="stylesheet" href="css/style3.css">
     <meta charset="utf-8">
     <title>Cocoa</title>
   </head>
