--- a/Project 1 redsign (project 2)/About.html
+++ b/Project 1 redsign (project 2)/About.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head> <link rel="stylesheet" href="css/stylesheet3.css">
+  <head> <link rel="stylesheet" href="css/style3.css">
     <meta charset="utf-8">
     <title>About me </title>
   </head>
