oopsie, didnt close the html element

--- a/Project 1 redsign (project 2)/5.html
+++ b/Project 1 redsign (project 2)/5.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr"
-  <head> <link rel="stylesheet" href="css/style3.css">
+<html lang="en" dir="ltr">
+  <head> <link rel="stylesheet" href="css/Style3.css">
     <meta charset="utf-8">
     <title>Robbie</title>
   </head>
