--- a/Project 1 redsign (project 2)/9.html
+++ b/Project 1 redsign (project 2)/9.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr"
+<html lang="en" dir="ltr">
   <head> <link rel="stylesheet" href="css/style3.css">
     <meta charset="utf-8">
     <title>Baby boy</title>
