--- a/Project 1 redsign (project 2)/About.html
+++ b/Project 1 redsign (project 2)/About.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-  <head> <link rel="stylesheet" href="css/style3.css">
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="css/style3.css">
     <meta charset="utf-8">
     <title>About me </title>
   </head>
