--- a/Project 1 redsign (project 2)/website.html
+++ b/Project 1 redsign (project 2)/website.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr"
-  <head> <link rel="stylesheet" href="css/style3.css">
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="css/Style3.css">
     <meta charset="utf-8">
     <title>Cheyanne's Website</title>
   </head>
