--- a/project2/About.html
+++ b/project2/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="css/style3.css">
+    <link rel="stylesheet" href="CSS/style3.css">
     <meta charset="utf-8">
     <title>About me </title>
   </head>
