--- a/project2/11.html
+++ b/project2/11.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head> <link rel="stylesheet" href="CSS/Style3.css">
+  <head> <link rel="stylesheet" href="CSS/Style3.CSS">
     <meta charset="utf-8">
     <title>Portrait of Cocoa</title>
   </head>
