--- a/project2/website.html
+++ b/project2/website.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="CSS/Style3.css">
+    <link rel="stylesheet" href="CSS/Style3.CSS">
     <meta charset="utf-8">
     <title>Cheyanne's Website</title>
   </head>
