--- a/project2/9.html
+++ b/project2/9.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head> <link rel="stylesheet" href="CSS/style3.CSS">
+  <head> <link rel="stylesheet" href="CSS/Style3.CSS">
     <meta charset="utf-8">
     <title>Baby boy</title>
   </head>
